Fixed player and cleaned up cmakelists

--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -49,7 +49,7 @@ PE1.Signal=FMC_NBL1
 FATFS0.BSP.ip=GPIO
 PE14.Locked=true
 RCC.USART3Freq_Value=54000000
-RCC.PLLSAIRCLKFreq_Value=96000000
+RCC.PLLSAIRCLKFreq_Value=50000000
 ProjectManager.ProjectBuild=false
 PJ14.Locked=true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
@@ -118,7 +118,7 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Signal=FMC_D1_DA1
 NVIC.RCC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false
 PJ1.GPIO_Label=LCD_R2 [RK043FN48H-CT672B_R2]
-RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLSAIQCLKFreq_Value=50000000
 SH.FMC_D3_DA3.ConfNb=1
 PG12.Signal=LTDC_B4
 PD6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -495,7 +495,7 @@ PD9.Signal=FMC_D14_DA14
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 PB10.Locked=true
-RCC.LCDTFToutputFreq_Value=48000000
+RCC.LCDTFToutputFreq_Value=25000000
 boardIOC=true
 PA12.GPIO_Label=OTG_FS_P
 PinOutPanel.CurrentBGAView=Top
@@ -530,7 +530,7 @@ PA1.Signal=ETH_REF_CLK
 RCC.VCOI2SOutputFreq_Value=192000000
 PD2.Mode=SD_4_bits_Wide_bus
 PH9.GPIOParameters=GPIO_Label
-RCC.PLLSAIPCLKFreq_Value=96000000
+RCC.PLLSAIPCLKFreq_Value=50000000
 board=STM32F746G-DISCO
 RCC.VCOOutputFreq_Value=432000000
 PF14.GPIOParameters=GPIO_Label
@@ -553,7 +553,7 @@ PI1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF1.Signal=FMC_A1
 SH.FMC_D11_DA11.ConfNb=1
 RCC.UART5Freq_Value=54000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 PJ0.Signal=LTDC_R1
 ProjectManager.AskForMigrate=true
 PE0.Signal=FMC_NBL0
@@ -651,7 +651,7 @@ PD4.Signal=GPIO_Input
 SH.FMC_D10_DA10.ConfNb=1
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PC3.Signal=FMC_SDCKE0
-RCC.SAI2Freq_Value=96000000
+RCC.SAI2Freq_Value=50000000
 PE10.Locked=true
 PB13.Locked=true
 PH10.GPIO_Label=DCMI_D1
@@ -853,7 +853,7 @@ Mcu.Pin104=PB2
 Mcu.Pin100=PD8
 PK7.Signal=LTDC_DE
 PK7.Locked=true
-RCC.SAI1Freq_Value=96000000
+RCC.SAI1Freq_Value=50000000
 RCC.CortexFreq_Value=216000000
 SH.FMC_A2.ConfNb=1
 PG6.Signal=GPIO_Output
@@ -916,7 +916,7 @@ Mcu.Pin7=PD7
 PJ8.GPIOParameters=GPIO_Label
 Mcu.Pin8=PC12
 Mcu.Pin9=PA15
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.VCOSAIOutputFreq_Value=100000000
 PI13.Signal=GPXTI13
 PJ2.Locked=true
 SH.FMC_A10.0=FMC_A10
@@ -970,6 +970,7 @@ PJ1.Signal=LTDC_R2
 SH.FMC_D4_DA4.0=FMC_D4
 PI12.GPIO_Label=LCD_DISP [RK043FN48H-CT672B_DISP] 
 PE0.GPIO_Label=FMC_NBL0 [MT48LC4M32B2B5-6A_DQM0]
+RCC.PLLSAIN=100
 PH3.GPIO_Label=FMC_SDNE0 [MT48LC4M32B2B5-6A_CS]
 PF5.Signal=FMC_A5
 PH7.Signal=I2C3_SCL
@@ -1031,7 +1032,7 @@ PF5.GPIOParameters=GPIO_Label
 PH2.GPIOParameters=GPIO_Label
 PH11.Locked=true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-RCC.PLLSAIoutputFreq_Value=96000000
+RCC.PLLSAIoutputFreq_Value=50000000
 PE11.Signal=FMC_D8_DA8
 RCC.LSE_VALUE=32768
 PD3.Locked=true
