Added more general interface for player

--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -758,7 +758,7 @@ PJ15.Signal=LTDC_B3
 PH9.GPIO_Label=DCMI_D0
 PI9.GPIO_Label=LCD_VSYNC [RK043FN48H-CT672B_VSYNC]
 PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 Mcu.Pin116=PA0/WKUP
 PI2.GPIOParameters=GPIO_Label
 Mcu.Pin117=PA4
