Made FATFS work with LWIP

--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -170,6 +170,7 @@ Mcu.Pin67=PH0/OSC_IN
 Mcu.Pin64=PK2
 Mcu.Pin65=PC9
 PJ11.Signal=LTDC_G4
+LWIP.DEFAULT_THREAD_STACKSIZE=512
 ETH.IPParameters=MediaInterface,PhyAddress,RxMode
 PC3.GPIOParameters=GPIO_Label
 PD10.Signal=FMC_D15_DA15
@@ -225,6 +226,7 @@ PJ4.GPIO_Label=LCD_R5 [RK043FN48H-CT672B_R5]
 PE1.GPIO_Label=FMC_NBL1 [MT48LC4M32B2B5-6A_DQM1]
 PK7.GPIO_Label=LCD_DE [RK043FN48H-CT672B_DE]
 PI7.Signal=SAI2_FS_A
+LWIP.MEMP_NUM_PBUF=2
 SH.FMC_A6.0=FMC_A6
 PE14.Signal=FMC_D11_DA11
 PB4.GPIO_Label=ARDUINO PWM/D3
@@ -358,7 +360,7 @@ PG11.Signal=ETH_TX_EN
 PH5.GPIOParameters=GPIO_Label
 PJ5.GPIO_Label=LCD_R6 [RK043FN48H-CT672B_R6]
 PJ14.GPIO_Label=LCD_B2 [RK043FN48H-CT672B_B2]
-LWIP.TCP_MSS=1024
+LWIP.TCP_MSS=512
 Mcu.Pin138=PE14
 Mcu.Pin139=PB10
 PD13.Signal=QUADSPI_BK1_IO3
@@ -458,6 +460,7 @@ PD6.Signal=GPXTI6
 Dma.Request0=SDMMC1_RX
 PF3.GPIO_Label=FMC_A3 [MT48LC4M32B2B5-6A_A3]
 Dma.SDMMC1_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+LWIP.PBUF_POOL_SIZE=11
 PF15.GPIOParameters=GPIO_Label
 PE12.Locked=true
 Mcu.Pin84=PH5
@@ -523,6 +526,7 @@ PH8.Locked=true
 PB10.GPIO_Label=ULPI_D3 [USB3320C-EZK_D3]
 SH.FMC_D13_DA13.0=FMC_D13
 PH8.Signal=I2C3_SDA
+LWIP.TCPIP_THREAD_STACKSIZE=512
 PC5.GPIOParameters=GPIO_Label
 PK0.GPIOParameters=GPIO_Label
 PG10.GPIOParameters=GPIO_Label
@@ -645,13 +649,12 @@ PJ10.Signal=LTDC_G3
 SH.GPXTI13.0=GPIO_EXTI13
 PJ10.Locked=true
 SH.FMC_A15_BA1.0=FMC_BA1
-NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PJ13.GPIO_Label=LCD_B1 [RK043FN48H-CT672B_B1]
 PI0.GPIO_PuPd=GPIO_NOPULL
 PH5.Signal=FMC_SDNWE
 PD15.GPIOParameters=GPIO_Label
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
-LWIP.IPParameters=LWIP_DNS,TCP_MSS
+LWIP.IPParameters=LWIP_DNS,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCPIP_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,MEMP_NUM_TCP_SEG
 PD4.Signal=GPIO_Input
 SH.FMC_D10_DA10.ConfNb=1
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
@@ -716,6 +719,7 @@ PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.FMC_A7.ConfNb=1
 PH15.Signal=GPIO_Input
 Dma.SDMMC1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+LWIP.MEMP_NUM_TCP_SEG=9
 RCC.PLLQoutputFreq_Value=48000000
 SH.FMC_A1.ConfNb=1
 PJ15.GPIOParameters=GPIO_Label
