--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -268,7 +268,7 @@ Mcu.Pin99=PG3
 Mcu.PinsNb=134
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0
 Mcu.ThirdPartyNb=1
-Mcu.UserConstants=
+Mcu.UserConstants=LWIP_ERRNO_STDINCLUDE,1
 Mcu.UserName=STM32F746NGHx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
@@ -829,7 +829,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_LWIP_Init-LWIP-false-HAL-false,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_DMA2D_Init-DMA2D-false-HAL-true,10-MX_LTDC_Init-LTDC-false-HAL-true,11-MX_FMC_Init-FMC-false-HAL-true,12-MX_SAI2_Init-SAI2-false-HAL-true,13-MX_QUADSPI_Init-QUADSPI-false-HAL-true,15-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,16-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_LWIP_Init-LWIP-false-HAL-false,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_DMA2D_Init-DMA2D-false-HAL-true,10-MX_LTDC_Init-LTDC-false-HAL-true,11-MX_FMC_Init-FMC-false-HAL-true,12-MX_SAI2_Init-SAI2-false-HAL-true,13-MX_QUADSPI_Init-QUADSPI-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
