--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -79,8 +79,9 @@ FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,24,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=30720
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -856,8 +857,8 @@ RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFToutputFreq_Value=10000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFToutputFreq_Value=12500000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -872,17 +873,16 @@ RCC.PLLN=432
 RCC.PLLQ=9
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLQoutputFreq_Value=48000000
-RCC.PLLSAIN=120
-RCC.PLLSAIPCLKFreq_Value=60000000
-RCC.PLLSAIQCLKFreq_Value=60000000
-RCC.PLLSAIR=3
-RCC.PLLSAIRCLKFreq_Value=40000000
-RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_4
-RCC.PLLSAIoutputFreq_Value=60000000
+RCC.PLLSAIN=200
+RCC.PLLSAIPCLKFreq_Value=100000000
+RCC.PLLSAIQCLKFreq_Value=100000000
+RCC.PLLSAIRCLKFreq_Value=100000000
+RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_8
+RCC.PLLSAIoutputFreq_Value=100000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=60000000
-RCC.SAI2Freq_Value=60000000
+RCC.SAI1Freq_Value=100000000
+RCC.SAI2Freq_Value=100000000
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
 RCC.SDMMCFreq_Value=48000000
 RCC.SPDIFRXFreq_Value=96000000
@@ -900,13 +900,13 @@ RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=432000000
-RCC.VCOSAIOutputFreq_Value=120000000
-SAI2.ErrorAudioFreq-SAI_A_Master=22.07 %
+RCC.VCOSAIOutputFreq_Value=200000000
+SAI2.ErrorAudioFreq-SAI_A_Master=1.72 %
 SAI2.IPParameters=Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MClockEnable-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master
 SAI2.Instance-SAI_A_Master=SAI$Index_Block_A
 SAI2.Instance-SAI_B_SyncSlave=SAI$Index_Block_B
 SAI2.MClockEnable-SAI_A_Master=SAI_MASTERCLOCK_DISABLE
-SAI2.RealAudioFreq-SAI_A_Master=234.375 KHz
+SAI2.RealAudioFreq-SAI_A_Master=195.312 KHz
 SAI2.VirtualMode-SAI_A_Master=VM_MASTER
 SAI2.VirtualMode-SAI_B_SyncSlave=VM_SLAVE
 SH.FMC_A0.0=FMC_A0,12b-sda1
