--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -4,7 +4,7 @@ CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_RE
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region0_Settings=0x90000000
 CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region1_Settings=0x90000000
-CORTEX_M7.CPU_DCache=Enabled
+CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_ENABLE
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_ENABLE
@@ -51,9 +51,15 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 FATFS.BSP.number=1
-FATFS.IPParameters=_USE_LFN,_USE_MUTEX
-FATFS._USE_LFN=0
-FATFS._USE_MUTEX=0
+FATFS.IPParameters=_USE_LFN,_USE_MUTEX,_MAX_SS,_FS_LOCK,_FS_REENTRANT,_LFN_UNICODE,_STRF_ENCODE,_MIN_SS
+FATFS._FS_LOCK=4
+FATFS._FS_REENTRANT=1
+FATFS._LFN_UNICODE=0
+FATFS._MAX_SS=4096
+FATFS._MIN_SS=512
+FATFS._STRF_ENCODE=0
+FATFS._USE_LFN=3
+FATFS._USE_MUTEX=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
 FATFS0.BSP.component=
@@ -103,10 +109,12 @@ LTDC.VSync=10
 LTDC.WindowX1_L0=480
 LTDC.WindowY1_L0=272
 LWIP.DEFAULT_THREAD_STACKSIZE=512
-LWIP.IPParameters=LWIP_DNS,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCPIP_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,MEMP_NUM_TCP_SEG
+LWIP.IPParameters=LWIP_DNS,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCPIP_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,MEMP_NUM_TCP_SEG,MEM_SIZE,MEMP_NUM_TCP_PCB_LISTEN
 LWIP.LWIP_DNS=1
 LWIP.MEMP_NUM_PBUF=2
+LWIP.MEMP_NUM_TCP_PCB_LISTEN=4
 LWIP.MEMP_NUM_TCP_SEG=9
+LWIP.MEM_SIZE=1500
 LWIP.PBUF_POOL_SIZE=11
 LWIP.TCPIP_THREAD_STACKSIZE=512
 LWIP.TCP_MSS=512
@@ -269,7 +277,7 @@ Mcu.Pin99=PG3
 Mcu.PinsNb=134
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0
 Mcu.ThirdPartyNb=1
-Mcu.UserConstants=LWIP_ERRNO_STDINCLUDE,1
+Mcu.UserConstants=
 Mcu.UserName=STM32F746NGHx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
@@ -288,6 +296,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.RCC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false
+NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -815,7 +824,7 @@ ProjectManager.DeviceId=STM32F746NGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -826,11 +835,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=InternetRadioReceiver.ioc
 ProjectManager.ProjectName=InternetRadioReceiver
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_LWIP_Init-LWIP-false-HAL-false,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_DMA2D_Init-DMA2D-false-HAL-true,10-MX_LTDC_Init-LTDC-false-HAL-true,11-MX_FMC_Init-FMC-false-HAL-true,12-MX_SAI2_Init-SAI2-false-HAL-true,13-MX_QUADSPI_Init-QUADSPI-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_SAI2_Init-SAI2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_DMA_Init-DMA-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,15-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,16-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
@@ -857,7 +866,7 @@ RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIQDiv,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFToutputFreq_Value=12500000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSE_VALUE=32768
@@ -873,16 +882,18 @@ RCC.PLLN=432
 RCC.PLLQ=9
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLQoutputFreq_Value=48000000
-RCC.PLLSAIN=200
+RCC.PLLSAIN=400
+RCC.PLLSAIP=RCC_PLLSAIP_DIV4
 RCC.PLLSAIPCLKFreq_Value=100000000
-RCC.PLLSAIQCLKFreq_Value=100000000
-RCC.PLLSAIRCLKFreq_Value=100000000
-RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_8
+RCC.PLLSAIQCLKFreq_Value=200000000
+RCC.PLLSAIQDiv=4
+RCC.PLLSAIRCLKFreq_Value=200000000
+RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_16
 RCC.PLLSAIoutputFreq_Value=100000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=100000000
-RCC.SAI2Freq_Value=100000000
+RCC.SAI1Freq_Value=50000000
+RCC.SAI2Freq_Value=50000000
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
 RCC.SDMMCFreq_Value=48000000
 RCC.SPDIFRXFreq_Value=96000000
@@ -900,7 +911,7 @@ RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=432000000
-RCC.VCOSAIOutputFreq_Value=200000000
+RCC.VCOSAIOutputFreq_Value=400000000
 SAI2.ErrorAudioFreq-SAI_A_Master=1.72 %
 SAI2.IPParameters=Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MClockEnable-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master
 SAI2.Instance-SAI_A_Master=SAI$Index_Block_A
@@ -909,6 +920,8 @@ SAI2.MClockEnable-SAI_A_Master=SAI_MASTERCLOCK_DISABLE
 SAI2.RealAudioFreq-SAI_A_Master=195.312 KHz
 SAI2.VirtualMode-SAI_A_Master=VM_MASTER
 SAI2.VirtualMode-SAI_B_SyncSlave=VM_SLAVE
+SDMMC1.ClockDiv=8
+SDMMC1.IPParameters=ClockDiv
 SH.FMC_A0.0=FMC_A0,12b-sda1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,12b-sda1
