--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -85,8 +85,9 @@ FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,configMAX_TASK_NAME_LEN
 FREERTOS.Tasks01=defaultTask,24,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMAX_TASK_NAME_LEN=64
 FREERTOS.configTOTAL_HEAP_SIZE=30720
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
