--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -51,9 +51,10 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 FATFS.BSP.number=1
-FATFS.IPParameters=_USE_LFN,_USE_MUTEX,_MAX_SS,_FS_LOCK,_FS_REENTRANT,_LFN_UNICODE,_STRF_ENCODE,_MIN_SS
+FATFS.IPParameters=_USE_LFN,_USE_MUTEX,_MAX_SS,_FS_LOCK,_FS_REENTRANT,_LFN_UNICODE,_STRF_ENCODE,_MIN_SS,_FS_TIMEOUT
 FATFS._FS_LOCK=4
 FATFS._FS_REENTRANT=1
+FATFS._FS_TIMEOUT=500
 FATFS._LFN_UNICODE=0
 FATFS._MAX_SS=4096
 FATFS._MIN_SS=512
@@ -88,7 +89,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,configMAX_TASK_NAME_LEN
 FREERTOS.Tasks01=defaultTask,24,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_TASK_NAME_LEN=64
-FREERTOS.configTOTAL_HEAP_SIZE=30720
+FREERTOS.configTOTAL_HEAP_SIZE=41000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -840,7 +841,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_SAI2_Init-SAI2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_DMA_Init-DMA-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,15-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,16-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_SAI2_Init-SAI2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_DMA_Init-DMA-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
