--- a/InternetRadioReceiver.ioc
+++ b/InternetRadioReceiver.ioc
@@ -111,8 +111,10 @@ LTDC.VSync=10
 LTDC.WindowX1_L0=480
 LTDC.WindowY1_L0=272
 LWIP.DEFAULT_THREAD_STACKSIZE=512
-LWIP.IPParameters=LWIP_DNS,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCPIP_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,MEMP_NUM_TCP_SEG,MEM_SIZE,MEMP_NUM_TCP_PCB_LISTEN
+LWIP.IPParameters=LWIP_DNS,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCPIP_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,MEMP_NUM_TCP_SEG,MEM_SIZE,MEMP_NUM_TCP_PCB_LISTEN,LWIP_SO_SNDTIMEO,LWIP_SO_RCVTIMEO
 LWIP.LWIP_DNS=1
+LWIP.LWIP_SO_RCVTIMEO=1
+LWIP.LWIP_SO_SNDTIMEO=1
 LWIP.MEMP_NUM_PBUF=2
 LWIP.MEMP_NUM_TCP_PCB_LISTEN=4
 LWIP.MEMP_NUM_TCP_SEG=9
@@ -828,7 +830,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -841,7 +843,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_SAI2_Init-SAI2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_DMA_Init-DMA-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_SAI2_Init-SAI2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_DMA_Init-DMA-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,15-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,16-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.18.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
